Fix Spacing

--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -15,7 +15,7 @@ body {
 }
 
 #Services, #Portfolio, #About {
-    padding: 4% 10%;
+    padding: 2% 10%;
 }
 
 #Portfolio {
